--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "truffle": "^5.11.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.2.2"
   },
