--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "styled-components": "^6.1.1",
     "truffle": "^5.11.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.2.2"
