--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ package-lock.json
 src/abi/
 src/gate/gateway.js
 src/abi/Roles.json
-src/abi/Roles.json
 src/abi/Migrations.json
 src/abi/Market.json
 src/abi/ManageEgg.json
@@ -34,8 +33,8 @@ src/abi/FoodFactory.json
 src/abi/Farmer.json
 src/abi/Deliver.json
 src/abi/Consumer.json
-src/gate/gateway.js
 .vscode/launch.json
 contracts/artifacts/build-info/025a36e8c98119b2804f510984c68c75.json
 contracts/artifacts/ManageEgg.json
 contracts/artifacts/ManageEgg_metadata.json
+package.json
